--- a/index.html
+++ b/index.html
@@ -9,70 +9,120 @@
         <title>NoMirar, graphic &amp; web design studio</title>
         <link rel="stylesheet" type="text/css"  href="04-bootstrap/css/bootstrap.css"/>
         <link rel="stylesheet" type="text/css"  href="01-css/index.css"/>  
-
     </head>
+
     <body>
-        <nav class="navigate">
-            <p class="nomirar-nav">No Mirar</p>
-            <img class="eye" src="03-images/closed-eye.svg" width="100" height="70" alt="pictogramme d'un oeil fermé pour afficher le menu">
-            <!--<ul class="nav-list">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p class="nomirar-nav">NoMirar Studio</p>
+                    <img class="eye" src="03-images/eye-opened.svg" width="100" height="70" alt="pictogramme d'un oeil pour afficher le menu">
+                    <nav class="navigate">
+                        <!--<ul class="nav-list">
 <li><a>Projets</a></li>
 <li><a>À propos</a></li>
 <li><a>Contact</a></li>
 </ul>-->
-        </nav>
+                    </nav>
+                </div>
+            </div>
+        </div>
 
 
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12 col-md-11 col-md-offset-1">
+        <header>
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-11 col-md-offset-1">
+                            <div class="header">
+                                <p class="n txt anim-text-flow">N</p>
+                                <p class="o txt anim-text-flow">O</p>
 
-                        <div class="header">
-                            <p class="n txt anim-text-flow">N</p>
-                            <p class="o txt anim-text-flow">O</p>
+                                <p class="m txt anim-text-flow">M</p>
+                                <p class="i txt anim-text-flow">I</p>
+                                <p class="r txt anim-text-flow">R</p>
+                                <p class="a txt anim-text-flow">A</p>
+                                <p class="rr txt anim-text-flow">R</p>
 
-                            <p class="m txt anim-text-flow">M</p>
-                            <p class="i txt anim-text-flow">I</p>
-                            <p class="r txt anim-text-flow">R</p>
-                            <p class="a txt anim-text-flow">A</p>
-                            <p class="rr txt anim-text-flow">R</p>
-
-                            <div class="picture">
-                                <img class="image-1"  src="03-images/7.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
+                                <div class="picture">
+                                    <img src="03-images/bg-1.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </header>
 
-        <div class="container-fluid">
+        <div class="projets container-fluid">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-xs-offset-1">
-                        <div class="projets"></div>
+                    <div class="col-xs-12">
+                        <div class="col-xs-6">
+                            <div class="col-xs-11 col-xs-offset-1">
+                                <h2>Projets &#172;</h2>
+                            </div>
+                            <!--                        </div>-->
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
+                                <div class="project-1">
+                                    <p><a><img src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px"><span>Patterns in Vegas</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
+                                <div class="project-2">
+                                 
+                                    <p><a><img src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px"><span>Created_201</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
+                                <div class="project-3">
+                                    <p><a><img src="03-images/Graph01.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
+                                <div class="project-4">
+                                    <p><a><img src="03-images/preview-1.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-xs-offset-6">
+                                <div class="project-5">
+                                    <p><a><img src="03-images/preview-1.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+  
+                        <div class="row">
+                            <div class="col-xs-10 col-xs-offset-2">
+                                <div class="project-6">
+                                    <p><a><img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Yuka Font</span></a></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-3 col-xs-offset-9">
+                                <div class="project-7">
+                                    <p><a><img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Yuka Font</span></a></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-xs-12 col-md-offset-2">
-                        <div class="projet-1"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-md-offset-6">
-                        <div class="projet-2"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
