partie preview portfolio

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
                                 <div class="project-3">
-                                    <p><a><img src="03-images/Graph01.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
+                                    <p><a><img src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -92,14 +92,14 @@
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
                                 <div class="project-4">
-                                    <p><a><img src="03-images/preview-1.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
+                                    <p><a><img src="03-images/preview-6.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6">
                                 <div class="project-5">
-                                    <p><a><img src="03-images/preview-1.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
+                                    <p><a><img src="03-images/preview-7.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
                                 </div>
                             </div>
                         </div>
