--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         <div class="col-xs-6">
                             <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
                                 <div class="project-1">
-                                    <p><a><img src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px"><span>Patterns in Vegas</span></a></p>
+                                    <p><a><img class="image-preview1" src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px">
+                                    <img class="image-hover1" src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px"><span>Patterns in Vegas</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +77,8 @@
                             <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
                                 <div class="project-2">
                                  
-                                    <p><a><img src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px"><span>Created_201</span></a></p>
+                                    <p><a><img class="image-preview2" src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px">
+                                    <img class="image-hover2" src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px"><span>Created_201</span></a></p>
                                 </div>
                             </div>
                         </div>
