--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 backnav">
                     <p class="nomirar-nav">NoMirar Studio</p>
                     <img class="eye" src="03-images/eye-opened.svg" width="100" height="70" alt="pictogramme d'un oeil pour afficher le menu">
                     <nav class="navigate">
