--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
                                 <div class="project-3">
-                                    <p><a><img src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
+                                    <p><a><img  class="image-preview3" src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><img class="image-hover3" src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
                                 </div>
                             </div>
                         </div>
