--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3">
                                 <div class="project-4">
-                                    <p><a><img src="03-images/preview-10.svg" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
+                                    <p><a><img class="image-preview4" src="03-images/preview-5.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px">
+                                    <img class="image-hover4" src="03-images/preview-5.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
                                 </div>
                             </div>
                         </div>
