--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6">
+                            <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7">
                                 <div class="project-5">
-                                    <p><a><img src="03-images/preview-8.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
+                                    <p><a><img class="image-preview5" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><img class="image-hover5" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
                                 </div>
                             </div>
                         </div>
