test des images responsive

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="col-xs-6">
                             <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
                                 <div class="project-1">
-                                    <p><a><img class="image-preview1" src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px">
-                                    <img class="image-hover1" src="03-images/preview-4.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés" width="280px" height="200px"><span>Patterns in Vegas</span></a></p>
+                                    <p><a><img class="image-preview1 img-responsive" src="03-images/gradient-books.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés">
+                                    <img class="image-hover1 img-responsive" src="03-images/gradient-books-hover.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés"><span class="span1">Patterns in Vegas</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -76,8 +76,8 @@
                             <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
                                 <div class="project-2">
                                  
-                                    <p><a><img class="image-preview2" src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px">
-                                    <img class="image-hover2" src="03-images/preview-1.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px"><span>Created_201</span></a></p>
+                                    <p><a><img class="image-preview2 img-responsive" src="03-images/created.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px">
+                                    <img class="image-hover2 img-responsive" src="03-images/created-hover.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique" width="280px" height="200px"><span class="span2">Created_201</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
                                 <div class="project-3">
-                                    <p><a><img  class="image-preview3" src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><img class="image-hover3" src="03-images/preview-5.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span>Plak'n'Play</span></a></p>
+                                    <p><a><img  class="image-preview3 img-responsive" src="03-images/plaknplay.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><img class="image-hover3 img-responsive" src="03-images/plaknplay-hover.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand" width="280px" height="200px"><span class="span3">Plak'n'Play</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -93,15 +93,15 @@
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3">
                                 <div class="project-4">
-                                    <p><a><img class="image-preview4" src="03-images/preview-5.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px">
-                                    <img class="image-hover4" src="03-images/preview-5.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span>Alex Lis</span></a></p>
+                                    <p><a><img class="image-preview4 img-responsive" src="03-images/alex.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px">
+                                    <img class="image-hover4 img-responsive" src="03-images/alex-hover.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014" width="280px" height="200px"><span class="span4">Alex Lis</span></a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7">
                                 <div class="project-5">
-                                    <p><a><img class="image-preview5" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><img class="image-hover5" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
+                                    <p><a><img class="image-preview5 img-responsive" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><img class="image-hover5 img-responsive" src="03-images/preview-2.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)" width="280px" height="200px"><span>Comunik</span></a></p>
                                 </div>
                             </div>
                         </div>
@@ -109,14 +109,15 @@
                         <div class="row">
                             <div class="col-xs-10 col-xs-offset-2">
                                 <div class="project-6">
-                                    <p><a><img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Yuka Font</span></a></p>
+                                    <p><a><img class="image-preview6 img-responsive" src="03-images/yuka.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><img class="image-hover6 img-responsive" src="03-images/yuka-hover.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Yuka Font</span></a></p>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-3 col-xs-offset-9">
                                 <div class="project-7">
-                                    <p><a><img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Yuka Font</span></a></p>
+                                    <p><a><img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px">
+                                    <img src="03-images/preview-1.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><span>Expérimentations</span></a></p>
                                 </div>
                             </div>
                         </div>
