--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                     <p class="nomirar-nav">NoMirar Studio</p>
                     <img class="eye" src="03-images/eye-opened.svg" width="100" height="70" alt="pictogramme d'un oeil pour afficher le menu">
                     <nav class="navigate">
-                        <!--<ul class="nav-list">
-<li><a>Projets</a></li>
-<li><a>À propos</a></li>
-<li><a>Contact</a></li>
-</ul>-->
+                        <ul class="nav-list">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
                     </nav>
                 </div>
             </div>
@@ -55,76 +55,76 @@
         </header>
 
         <div class="projets container-fluid">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="col-xs-6">
-                            <div class="col-xs-11 col-xs-offset-1">
-                                <h2>Projets &#172;</h2>
-                            </div>
-                            <!--                        </div>-->
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="col-xs-6">
+                        <div class="col-xs-11 col-xs-offset-1">
+                            <h2>Projets &#172;</h2>
                         </div>
-                        <div class="col-xs-6">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
-                                <div class="project-1">
-                                    <p><a><img class="image-preview1 img-responsive" src="03-images/gradient-books.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés">
+                        <!--                        </div>-->
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="col-xs-6 col-xs-offset-6 col-md-11 col-md-offset-1">
+                            <div class="project-1">
+                                <p><a><img class="image-preview1 img-responsive" src="03-images/gradient-books.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés">
                                     <img class="image-hover1 img-responsive" src="03-images/gradient-books-hover.png" alt="image d'édition sur la traduction des émotions de Las Vegas Parano par les motifs sérigraphiés"><span class="span1">Patterns in Vegas</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
-                                <div class="project-2">
-                                 
-                                    <p><a><img class="image-preview2 img-responsive" src="03-images/created.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique">
-                                    <img class="image-hover2 img-responsive" src="03-images/created-hover.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique"><span class="span2">Created_201</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
-                                <div class="project-3">
-                                    <p><a><img  class="image-preview3 img-responsive" src="03-images/plaknplay.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><img class="image-hover3 img-responsive" src="03-images/plaknplay-hover.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><span class="span3">Plak'n'Play</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3">
-                                <div class="project-4">
-                                    <p><a><img class="image-preview4 img-responsive" src="03-images/alex.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014">
-                                    <img class="image-hover4 img-responsive" src="03-images/alex-hover.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014"><span class="span4">Alex Lis</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7">
-                                <div class="project-5">
-                                    <p><a><img class="image-preview5 img-responsive" src="03-images/com.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><img class="image-hover5 img-responsive" src="03-images/com-hover.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><span class="span5">Comunik</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-  
-                        <div class="row">
-                            <div class="col-xs-10 col-xs-offset-2">
-                                <div class="project-6">
-                                    <p><a><img class="image-preview6 img-responsive" src="03-images/yuka.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><img class="image-hover6 img-responsive" src="03-images/yuka-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span6">Yuka Font</span></a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-3 col-xs-offset-9">
-                                <div class="project-7">
-                                    <p><a><img class="image-preview7 img-responsive" src="03-images/expe.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px">
-                                    <img class="image-hover7 img-responsive"  src="03-images/expe-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span7">Expérimentations</span></a></p>
-                                </div>
                             </div>
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-6 col-md-10 col-md-offset-2">
+                            <div class="project-2">
+
+                                <p><a><img class="image-preview2 img-responsive" src="03-images/created.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique">
+                                    <img class="image-hover2 img-responsive" src="03-images/created-hover.png" alt="image du mémoire de fin d'études basé sur le potentiel de l'erreur dans la création graphique"><span class="span2">Created_201</span></a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-6 col-md-4 col-md-offset-8">
+                            <div class="project-3">
+                                <p><a><img  class="image-preview3 img-responsive" src="03-images/plaknplay.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><img class="image-hover3 img-responsive" src="03-images/plaknplay-hover.png" alt="image de cartes de visites réalisées pour plak'n'play, société d'affichage culturel allemand"><span class="span3">Plak'n'Play</span></a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-6 col-md-9 col-md-offset-3">
+                            <div class="project-4">
+                                <p><a><img class="image-preview4 img-responsive" src="03-images/alex.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014">
+                                    <img class="image-hover4 img-responsive" src="03-images/alex-hover.png" alt="image d'affiche réalisée pour le graphiste allemand Alexander Lis pour sa conférence à Mannheim en 2014"><span class="span4">Alex Lis</span></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-6 col-md-5 col-md-offset-7">
+                            <div class="project-5">
+                                <p><a><img class="image-preview5 img-responsive" src="03-images/com.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><img class="image-hover5 img-responsive" src="03-images/com-hover.png" alt="identité visuelle et conception d'un site pour la société Comunik (projet non retenu)"><span class="span5">Comunik</span></a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-10 col-xs-offset-2">
+                            <div class="project-6">
+                                <p><a><img class="image-preview6 img-responsive" src="03-images/yuka.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px"><img class="image-hover6 img-responsive" src="03-images/yuka-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span6">Yuka Font</span></a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-3 col-xs-offset-9">
+                            <div class="project-7">
+                                <p><a><img class="image-preview7 img-responsive" src="03-images/expe.png" alt="conception d'une typographie inspirée de la famille didonne" width="280px" height="200px">
+                                    <img class="image-hover7 img-responsive"  src="03-images/expe-hover.png" alt="conception d'une typographie inspirée de la famille didonne"><span class="span7">Expérimentations</span></a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
+        </div>
 
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
