--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
             </div>
         </div>
 
-
         <header>
             <div class="container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-md-11 col-md-offset-1">
+                        <div class="col-xs-12 col-md-9 col-md-offset-3">
                             <div class="header">
                                 <p class="n txt anim-text-flow">N</p>
                                 <p class="o txt anim-text-flow">O</p>
@@ -42,7 +41,7 @@
                                 <p class="rr txt anim-text-flow">R</p>
 
                                 <div class="picture">
-                                    <img src="03-images/bg-7.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
+                                    <img id="image" src="03-images/bg-7.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
                                 </div>
                             </div>
                         </div>
@@ -119,9 +118,48 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
+        <div class="description container-fluid">
+            <div class="row">
+                <div class="col-xs-11 col-xs-offset-1">
+                    <h2 class="titrepropos">&#192; Propos &#172;</h2>
+                </div>
+                <div class="col-xs-12 col-sm-8 col-sm-offset-4">
+                    <div id="perspective">
+                        <div id="tilter">Dirigé par Mélysa Bojama, NoMirar est un studio de création pluridisciplinaire fondé en 2016 et basé à Besançon. Orienté dans la création graphique et web, il saura répondre au mieux aux attentes du client. <br/> N'hésitez pas à écrire pour toute collaboration, renseignements ou juste pour dire bonjour ! </div></div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- DIV CACHÉE DU PREMIER PROJET-->
+
+<!--
+        <div class="lightbox">
+            <div class="container-fluid">
+                <div class="container">
+                    <h3 class="patterntitle">Patterns In Vegas</h3>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-3 col-sm-offset-8">
+                            <div class="patterntxt">
+                                <p>
+                                    Patterns In Vegas est la conception de 5 ouvrages uniques traduisant les émotions du livre "Las Vegas Parano" écrit pas Hunter S. Thompson en 1971.
+                                </p>
+                                <p>
+                                    Après avoir créé une grille universelle et relevé 7 émotions ressenties par les deux personnages principaux, un motif caractéristique de l'émotion en question est associé à une couleur symbolique puis sérigraphié sur le livre d'origine. </p>
+
+                                <p>
+                                    Un second volume a été entièrement créé afin de laisser les motifs raconter l'histoire.
+                                    Trois autres volumes ont été sérigraphiés en dégradé sur tranche afin de faire office de résumé de l'ouvrage.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+-->
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
