--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <p class="rr txt anim-text-flow">R</p>
 
                                 <div class="picture">
-                                    <img id="image" src="03-images/bg-7.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
+                                    <img id="image" src="03-images/bg-4.png" width="895" height="519" alt="image bitmap d'un détail d'une plante">
                                 </div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-4">
                     <div id="perspective">
-                        <div id="tilter">Dirigé par Mélysa Bojama, NoMirar est un studio de création pluridisciplinaire fondé en 2016 et basé à Besançon. Orienté dans la création graphique et web, il saura répondre au mieux aux attentes du client. <br/> N'hésitez pas à écrire pour toute collaboration, renseignements ou juste pour dire bonjour ! </div></div>
+                        <div id="tilter">Dirigé par Mélysa Bojama, NoMirar est un studio de création pluridisciplinaire fondé en 2016 et basé à Besançon. Orienté dans la création graphique et web, il saura répondre au mieux à vos attentes. <br/> N'hésitez pas à écrire pour toute collaboration, renseignements ou juste pour dire bonjour ! </div></div>
                 </div>
             </div>
         </div>
