essais ipad mini

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 backnav">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 backnav">
                     <p class="nomirar-nav">NoMirar Studio</p>
                     <img class="eye" src="03-images/eye-opened.svg" width="100" height="70" alt="pictogramme d'un oeil pour afficher le menu">
                     <nav class="navigate">
@@ -29,7 +29,7 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-md-11 col-md-offset-1">
+                        <div class="col-xs-12 col-sm-12 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
                             <div class="header">
                                 <p class="n txt anim-text-flow">N</p>
                                 <p class="o txt anim-text-flow">O</p>
@@ -122,8 +122,10 @@
         </div>
         <div class="description container-fluid">
             <div class="row">
-                <div class="col-xs-11 col-xs-offset-1">
-                    <h2 class="titrepropos">&#192; Propos &#172;</h2>
+                <div class="col-xs-6">
+                    <div class="col-xs-11 col-xs-offset-1">
+                        <h2 class="titrepropos">&#192; Propos &#172;</h2>
+                    </div>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-sm-offset-4">
                     <div id="perspective">
@@ -135,13 +137,19 @@
 
         <!-- DIV CACHÉE DU PREMIER PROJET-->
 
-<!--
-        <div class="lightbox">
+
+       <!-- <div class="lightbox">
             <div class="container-fluid">
-                <div class="container">
-                    <h3 class="patterntitle">Patterns In Vegas</h3>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-3 col-sm-offset-8">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="col-xs-11">
+                            <h3 class="patterntitle">Patterns In Vegas</h3>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-6">
+                        <div class="col-xs-12 col-sm-4 col-sm-offset-4">
                             <div class="patterntxt">
                                 <p>
                                     Patterns In Vegas est la conception de 5 ouvrages uniques traduisant les émotions du livre "Las Vegas Parano" écrit pas Hunter S. Thompson en 1971.
@@ -160,6 +168,7 @@
             </div>
         </div>
 -->
+
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
