--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
         <div class="projets container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <div class="col-xs-6">
-                        <div class="col-xs-11 col-xs-offset-1">
+                        <div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
                             <h2>Projets &#172;</h2>
                         </div>
                         <!--                        </div>-->
