--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-xs-offset-0 col-sm-12 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1">
+                        <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11 col-xs-offset-0 col-sm-offset-0 col-md-offset-1 col-lg-offset-1">
                             <div class="header">
                                 <p class="n txt anim-text-flow">N</p>
                                 <p class="o txt anim-text-flow">O</p>
@@ -134,7 +134,7 @@
 
 <!-- DIV CACHÉE DU PREMIER PROJET-->
 
-        <div class="lightbox">
+      <!--  <div class="lightbox">
             <div class="container-fluid">
                             <h3 class="patterntitle">Patterns In Vegas</h3>
                             
@@ -163,7 +163,7 @@
                 </div>
         </div>
  
-
+-->
 
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
